# sqlite-mcp-rs

./: .gitignore  AGENTS.md  Cargo.toml  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  USAGE.md  test_schema.sh  verify_server.py
.github/workflows/: release.yml
openspec/changes/archive/2026-02-24-add-table-and-column-comments/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-24-add-table-and-column-comments/specs/table-column-comments/: spec.md
openspec/changes/archive/2026-02-24-document-filter-operators/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-24-document-filter-operators/specs/filter-documentation/: spec.md
openspec/specs/get-table-schema/: spec.md
src/: main.rs
src/db/: adapter.rs  mod.rs  sqlite.rs
src/tools/: batch.rs  delete.rs  get_schema.rs  insert.rs  list_tables.rs  mod.rs  query.rs  set_column_comment.rs  set_table_comment.rs  update.rs
test/: README.md  demo.py  test.db  test_data.sql  test_simple.py
