[package]
name = "sqlite-mcp-rs"
version = "0.5.0"
edition = "2021"
description = "SQLite MCP Server - Fast Rust implementation with JSON-based database operations"
license = "MIT"
repository = "https://github.com/your-username/sqlite-mcp"

[dependencies]
rusqlite = { version = "0.38.0", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
base64 = "0.21"
async-trait = "0.1"
